@@ -132,8 +132,8 @@ CITTAX=10
 # <MESSAGE>               - 
 RESISTINGARREST=;;resisting arrest;jail1;Resisting arrest by a lawful officer is a serious crime.
 TRESPASSING=!home !indoors;!recently;trespassing;jail3;Your kind are not allowed here.
-NUDITY=!home !indoors;witness !recently;indecent exposure;warning;Nudity below the waist violates our high moral code.  Use the 'outfit' command if you need clothes!
-ARMED=!home !indoors;!recently !combat witness;violating the armed citizen law;warning;Walking around armed makes you look like a trouble-maker.  Sheath your weapon, or 'remove' the weapon until you need it.
+NUDITY=!home !indoors;witness !recently;indecent exposure;warning punishcap=parole4;Nudity below the waist violates our high moral code.  Use the 'outfit' command if you need clothes!
+ARMED=!home !indoors;!recently !combat witness;violating the armed citizen law;warning punishcap=parole4;Walking around armed makes you look like a trouble-maker.  Sheath your weapon, or 'remove' the weapon until you need it.
 ASSAULT=;;assaulting <T-NAME>;jail1;Assault is a hideous offense.
 MURDER=;;murdering <T-NAME>;jail3;Murder is a barbarous offense.
 PROPERTYROB=;!witness;robbing the property of <T-NAME>;jail3;Robbery violates our high moral code.
@@ -158,10 +158,10 @@ THIEF_DEATHTRAP=;;setting a death trap;death;Murder by trapping is a barbarous o
 THIEF_FORGERY=;;forgery;jail2;Forgery is deceptive and quite illegal.
 THIEF_RACKETEER=;;racketeering <T-NAME>;jail3;Racketeering is a form of vicious theft.
 THIEF_ROBBERY=;;robbing <T-NAME>;jail3;Robbery violates our high moral code.
-INEBRIATION=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1;Drunkenness is a demeaning and intolerable state.
-POISON_ALCOHOL=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1;Drunkenness is a demeaning and intolerable state.
-POISON_FIREBREATHER=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1;Drunkenness is a demeaning and intolerable state.
-POISON_LIQUOR=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1;Drunkenness is a demeaning and intolerable state.
+INEBRIATION=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1 punishcap=jail4;Drunkenness is a demeaning and intolerable state.
+POISON_ALCOHOL=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1 punishcap=jail4;Drunkenness is a demeaning and intolerable state.
+POISON_FIREBREATHER=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1 punishcap=jail4;Drunkenness is a demeaning and intolerable state.
+POISON_LIQUOR=!indoors !home !pub !tavern !inn !bar;!recently;public intoxication;parole1 punishcap=jail4;Drunkenness is a demeaning and intolerable state.
 
 # The illegal influence laws have the following form:
 # $<SKILL/ABILITY NAME>=<LOCATION RESTRICTIONS>;<FLAGS>;<NAME>;<PUNISHMENT>;<MESSAGE>
@@ -173,15 +173,15 @@ POISON_LIQUOR=!indoors !home !pub !tavern !inn !bar;!recently;public intoxicatio
 # Most of the parameters are the same as the base crimes, the new one (EMOTE STRINGS)
 # is a space-delimited list of strings which occur in the emote or social or activity.
 # Each entry may be surrounded by quotes to group words into phrases.
-CRIME1=spit(s) spits;;witness;spitting in city limits;warning;Spitting is a dirty habit.
-CRIME2=wiggies wiggy wiggie;!home;witness;wiggying in public;warning;Wiggying is considered indecent.
+CRIME1=spit(s) spits;;witness;spitting in city limits;warning punishcap=jail1;Spitting is a dirty habit.
+CRIME2=wiggies wiggy wiggie;!home;witness;wiggying in public;warning punishcap=jail1;Wiggying is considered indecent.
 CRIME3=throttle "grabs for your";!home;witness;throttling in public;warning;Throttling is considered unacceptable behavior, as it violates the peace.
-CRIME4="barks at" "barks loudly at";!indoors;witness;creating a disturbance;warning;We do not take kindly to people creating a nuisance of themselves.
+CRIME4="barks at" "barks loudly at";!indoors;witness;creating a disturbance;warning punishcap=jail1;We do not take kindly to people creating a nuisance of themselves.
 CRIME5="flicks a bird" "gives you the bird";!indoors;witness recently;indecent public behavior;warning;'Flicking the bird' is considered unnacceptable behavior.
 CRIME6="flicks his whip across" "flicks her whip across" "his tongue over" "her tongue over" "tongue around you" bites slaps "vague stroking motions" "and ties his to a four" "and ties her to a four" "and ties you securely to a";!indoors;witness recently;inappropriate public behavior;warning;If you need to do that, we kindly ask that you take it inside.
 CRIME7="ducks down low, charges forward" "head into your stomach" "doubles over in pain" "suddenly knees you" "rips out" "With a resounding WHAP" "to the floor, pinning";!indoors;witness recently;public fighting;warning;Do NOT violate our peace.
-CRIME8="swears at";!indoors;witness recently;inappropriate public language;warning;If you need to curse, go somewhere more private.
-CRIME9="stripping away" "has started to strip you" "clothes off and parades" "is exposing" "has just revealed" "pants and rudely moons" "bends over and gives you";!indoors;witness;indecent exposure;warning;Nudity violates our high moral code.  Use the 'outfit' command if you need clothes!
+CRIME8="swears at";!indoors;witness recently;inappropriate public language;warning punishcap=jail1;If you need to curse, go somewhere more private.
+CRIME9="stripping away" "has started to strip you" "clothes off and parades" "is exposing" "has just revealed" "pants and rudely moons" "bends over and gives you";!indoors;witness;indecent exposure;warning punishcap=jail1;Nudity violates our high moral code.  Use the 'outfit' command if you need clothes!
 CRIME10="pukes on" "spews vomit and pukes all over your";!indoors;witness recently;desecrating our streets;parole1;If you need to be sick, DO NOT do it on our streets.
 CRIME11="while stabbing a pin into a voodoo doll";;witness;practicing voodoo;jail2;Voodoo is NOT tolerated here.
 
