@@ -120,6 +120,7 @@ skiptrial = The penalty is administered directly by the officer.\n\r\
 fine = A fine, payable to the tax collector, is assessed.\n\r\
 detain = Takes the criminal to a detention area.  Works only with warnings/threats.\n\r\
 norelease = Criminal is never released from jail or detention.\n\r\
+punishcap = Maximum punishment ever.\n\r\
 \n\r\
 Possible flags include:\n\r\
 witness = The witness for the crime must be in the room.\n\r\
